# game-save-manager

./: .gitignore  .npmrc  README.md  auto-imports.d.ts  components.d.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vue.config.js
.github/ISSUE_TEMPLATE/: -----bug-report.md  -----feature-request.md  ----bug-report.md
.github/workflows/: pre-release.yml  release.yml  rust-clippy.yml  tauri.yml  webpack.yml
public/: game-info.json
scripts/: portable.mjs
src/: App.vue  background.ts  i18n.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  test.txttttt
src-tauri/src/: archive.rs  backup.rs  cloud.rs  config.rs  default_value.rs  errors.rs  ipc_handler.rs  main.rs  tray.rs
src/background/: archive.ts  config.ts  ipcHandler.ts  saveManager.ts  saveTypes.ts
src/components/: HelloWorld.vue  MainSideBar.vue  SaveLocationDrawer.vue
src/components/AddGame/: MainContent.vue  SubmitBar.vue
src/locales/: cn.json
src/router/: index.ts
src/schemas/: BackendTypes.ts  events.ts  saveTypes.ts
src/store/: index.ts
src/stores/: ConfigFile.ts
src/utils/: notifications.ts
src/views/: About.vue  AddGame.vue  ChangeGameInfo.vue  GameManage.vue  Home.vue  InOut.vue  Settings.vue  SyncSettings.vue
