[package]
name = "rusty-game-save-manager"
version = "1.0.0"
description = "A save manager for games"
authors = ["Sworld"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = ["dialog", "shell-open"] }
anyhow = "1.0.69"
chrono = "0.4.23"
zip = "0.5.13"
fs_extra = "1.3.0"
open = "4.0.1"
thiserror = "1.0.40"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = "debuginfo"
